--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
         <div class="containe ">
           <div class="row">
-            <div class="col col-md-3 r justify-items-center align-items-center d-">
+            <div class="col col-md-3 r justify-items-center align-items-center d-flex">
               <img src="categories/bag.png" alt="">
             </div>
             <div class="col">
